Fixed an error with sign using Gmail and other accounts. Modified some logic. | #75.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="ssl_tls">SSL/TLS</string>
     <string name="startls">STARTLS</string>
     <string name="template_email_alredy_added">The email \"%1$s\" already added!</string>
+    <string name="settings_not_valid">The settings is not valid</string>
 </resources>
