--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -192,4 +192,5 @@
     <string name="startls">STARTLS</string>
     <string name="template_email_alredy_added">The email \"%1$s\" already added!</string>
     <string name="settings_not_valid">The settings is not valid</string>
+    <string name="skip_setup">Skip setup</string>
 </resources>
