--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="settings_not_valid">The settings is not valid</string>
     <string name="skip_setup">Skip setup</string>
     <string name="expand_an_account_managment">Expand an account management</string>
+    <string name="add_account">Add account</string>
 </resources>
