Added NotificationChannelManager to support notifications on Android 8.0 | Close #121.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -199,4 +199,6 @@
     <string name="experimental">Experimental</string>
     <string name="experimental_settings">Experimental Settings</string>
     <string name="simulate_app_crash">Simulate app crash</string>
+    <string name="attachments">Attachments</string>
+    <string name="download_attachments_notification_channel">The download attachments notification channel</string>
 </resources>
