--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -201,4 +201,5 @@
     <string name="simulate_app_crash">Simulate app crash</string>
     <string name="attachments">Attachments</string>
     <string name="download_attachments_notification_channel">The download attachments notification channel</string>
+    <string name="template_warning_max_attachments_size_for_decryption">The app cannot decrypt an attachment greater than %1$s</string>
 </resources>
