--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -202,4 +202,13 @@
     <string name="attachments">Attachments</string>
     <string name="download_attachments_notification_channel">The download attachments notification channel</string>
     <string name="template_warning_max_attachments_size_for_decryption">The app cannot decrypt an attachment greater than %1$s</string>
+    <string name="decrypt_error_js_tool_error">There is a JS tool error.</string>
+    <string name="decrypt_error_could_not_open_message">Could not open this message with FlowCrypt.</string>
+    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with FlowCrypt.</string>
+    <string name="decrypt_error_please_write_me">Please write me at human@flowcrypt.com so that I can fix it. I
+        respond very promptly.</string>
+    <string name="decrypt_error_single_sender">Normally, messages are encrypted for at least two people
+        (sender and the receiver). It seems the sender encrypted this message manually for themselves,
+        and forgot to add you as a receiver. </string>
+    <string name="diagnostic_info">Diagnostic info</string>
 </resources>
