--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -19,12 +19,12 @@
     <string name="error_some_email_is_not_valid">Error: invalid email \"%1$s\"</string>
     <string name="internet_connection_is_not_available">Error: no internet</string>
     <string name="unknown_error">Unknown error</string>
-    <string name="message_was_sent">Your message was sent.</string>
+    <string name="message_was_sent">Your message was sent</string>
     <string name="application_crashed">Application has crashed. You can send a report to the developer.</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="action_settings">Settings</string>
     <string name="signed_in_fmt">We received access for %1$s</string>
-    <string name="access_denied">Access denied.</string>
+    <string name="access_denied">Access denied</string>
     <string name="privacy">Privacy</string>
     <string name="terms">Terms</string>
     <string name="security">Security</string>
@@ -45,17 +45,17 @@
     <string name="loading_account">Loading account</string>
     <string name="no_backups_found">No backups found on this account</string>
     <string name="refresh">Refresh</string>
-    <string name="passphrase_must_be_non_empty">Passphrase must be non-empty.</string>
-    <string name="your_message_must_be_non_empty">Message should not be empty.</string>
-    <string name="password_is_incorrect">Incorrect pass phrase, please try again.</string>
+    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
+    <string name="your_message_must_be_non_empty">Message should not be empty</string>
+    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
     <string name="use_another_account">Use another account</string>
     <string name="reply_all">Reply all</string>
     <string name="lock">Lock</string>
     <string name="something_wrong_with_receiving_message">Error: could not receive message</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_login">Sign in</string>
-    <string name="please_wait_while_message_will_be_sent">Sending message, please wait.</string>
-    <string name="please_wait_while_information_about_contacts_will_be_updated">Loading information about contacts, please wait.</string>
+    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
+    <string name="please_wait_while_information_about_contacts_will_be_updated">Loading information about contacts, please wait</string>
     <string name="create_a_new_key">Create a new key</string>
     <string name="import_my_key">Import my key</string>
     <string name="access_to_read_the_sdcard_id_denied">File access denied</string>
@@ -91,10 +91,10 @@
     <string name="backups_found_message">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
     <string name="key_successfully_saved">Key successfully saved</string>
     <string name="your_key_backup">Your %1$s Backup</string>
-    <string name="backup_was_sent_successfully">Backed up successfully.</string>
-    <string name="backup_was_not_sent">Error backing up, please try again.</string>
+    <string name="backup_was_sent_successfully">Backed up successfully</string>
+    <string name="backup_was_not_sent">Error backing up, please try again</string>
     <string name="message_was_deleted">The message was deleted</string>
-    <string name="please_wait_while_action_will_be_completed">Still working, please wait.</string>
+    <string name="please_wait_while_action_will_be_completed">Still working, please wait</string>
     <string name="message_was_archived">Message archived</string>
     <string name="retry">Retry</string>
     <string name="warning">Warning</string>
@@ -111,7 +111,7 @@
     <string name="error_occurred_while_this_action_running">Error: could not complete action</string>
     <string name="error_occurred_while_receiving_private_keys">Could not retrieve your private key</string>
     <string name="no_subject">(no subject)</string>
-    <string name="error_occurred_please_try_again">Error occurred. Please try again.</string>
+    <string name="error_occurred_please_try_again">Error occurred, please try again</string>
     <string name="user_photo">The user photo</string>
     <string name="template_message_part_public_key_owner">Public Key for %1$s</string>
     <string name="template_message_part_public_key_key_words" formatted="false"><![CDATA[KeyWords: <font color=\'#088447\'>%1$s</font>]]></string>
@@ -143,7 +143,7 @@
     <string name="switch_to_standard_email">Switch to standard email</string>
     <string name="switch_to_secure_email">Switch to secure email</string>
     <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
-    <string name="please_update_information_about_contacts">Please update information about the contacts.</string>
+    <string name="please_update_information_about_contacts">Need to update recipient information</string>
     <string name="import_their_public_key">Import their Public Key</string>
     <string name="template_remove_recipient">Remove %1$s</string>
     <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
@@ -154,11 +154,11 @@
     <string name="public_">Public</string>
     <string name="message_was_moved_to_inbox">The message was moved to inbox</string>
     <string name="attachment">Attachment</string>
-    <string name="can_not_connect_to_the_imap_server">Can not connect to the IMAP server</string>
-    <string name="failed_load_message_from_email_server">Failed to load a message from the email server</string>
+    <string name="can_not_connect_to_the_imap_server">Cannot connect to the IMAP server</string>
+    <string name="failed_load_message_from_email_server">Failed to load message from email server</string>
     <string name="cancel">Cancel</string>
     <string name="waiting_to_load">Waiting to load</string>
-    <string name="download_complete">Download complete.</string>
+    <string name="download_complete">Download complete</string>
     <string name="template_attachment_already_loading">Attachment \"%1$s\" already loading </string>
     <string name="cannot_save_attachment_without_permission">The attachment cannot be saved without the write external
         storage permission</string>
