Added LoadGmailAliasesLoader. Added show a spinner with available aliases. | #80.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -212,4 +212,5 @@
         and forgot to add you as a receiver. </string>
     <string name="diagnostic_info">Diagnostic info</string>
     <string name="email_does_not_available_in_this_folder">This email doesn\'t available in this folder</string>
+    <string name="from">From</string>
 </resources>
