--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -211,7 +211,7 @@
         (sender and the receiver). It seems the sender encrypted this message manually for themselves,
         and forgot to add you as a receiver. </string>
     <string name="diagnostic_info">Diagnostic info</string>
-    <string name="email_does_not_available_in_this_folder">This email doesn\'t available in this folder</string>
+    <string name="email_does_not_available_in_this_folder">Message not found, it may have been moved to another folder.</string>
     <string name="from">From</string>
     <string name="google_api_is_not_available">Error: Google API is not available</string>
 </resources>
