--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -214,4 +214,6 @@
     <string name="email_does_not_available_in_this_folder">Message not found, it may have been moved to another folder.</string>
     <string name="from">From</string>
     <string name="google_api_is_not_available">Error: Google API is not available</string>
+    <string name="show_original_message">Show the original message</string>
+    <string name="hide_original_message">Hide the original message</string>
 </resources>
