--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -203,17 +203,20 @@
     <string name="download_attachments_notification_channel">The download attachments notification channel</string>
     <string name="template_warning_max_attachments_size_for_decryption">The app cannot decrypt an attachment greater than %1$s</string>
     <string name="decrypt_error_js_tool_error">There is a JS tool error.</string>
-    <string name="decrypt_error_could_not_open_message">Could not open this message with FlowCrypt.</string>
-    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with FlowCrypt.</string>
+    <string name="decrypt_error_could_not_open_message">Could not open this message with %1$s.</string>
+    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with %1$s.</string>
     <string name="decrypt_error_please_write_me">Please write me at human@flowcrypt.com so that I can fix it. I
         respond very promptly.</string>
     <string name="decrypt_error_single_sender">Normally, messages are encrypted for at least two people
         (sender and the receiver). It seems the sender encrypted this message manually for themselves,
         and forgot to add you as a receiver. Please ask them to send a new message.</string>
+    <string name="decrypt_error_current_key_cannot_message">You current key cannot open this message. If you
+        have any other keys available, you should import them  now.</string>
     <string name="diagnostic_info">Diagnostic info</string>
     <string name="email_does_not_available_in_this_folder">Message not found, it may have been moved to another folder.</string>
     <string name="from">From</string>
     <string name="google_api_is_not_available">Error: Google API is not available</string>
     <string name="show_original_message">Show the original message</string>
     <string name="hide_original_message">Hide the original message</string>
+    <string name="import_missing_key">Import missing key</string>
 </resources>
