--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="read_sdcard_permission_explanation_text">File access needed to import keys</string>
     <string name="select_key_to_import">Select a key to import</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="backup">Backup</string>
+    <string name="backups">Backups</string>
     <string name="contacts">Contacts</string>
     <string name="keys">Keys</string>
     <string name="servers">Servers</string>
@@ -220,4 +220,5 @@
     <string name="hide_original_message">Hide the original message</string>
     <string name="import_missing_key">Import missing key</string>
     <string name="security_settings_were_not_implemented_yet">Security Settings were not implemented yet, stay tuned.</string>
+    <string name="loading_backups">Loading backups</string>
 </resources>
