Added debug code.| Close #148, #149, #150.

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -239,4 +239,5 @@
     <string name="you_should_select_one_or_more_keys">You should select one or more keys</string>
     <string name="select_keys">Select key(s):</string>
     <string name="your_public_key_will_be_appended">Your public key will be appended to the reply message</string>
+    <string name="error_occured_try_again_later">An error occurred. Please try again later.</string>
 </resources>
