--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -242,4 +242,5 @@
     <string name="error_occurred_try_again_later">An error occurred. Please try again later.</string>
     <string name="error_occurred_while_get_info_about_private_keys">An error occurred while getting info about the
         private keys</string>
+    <string name="progress_message">%1$d\%% %2$s</string>
 </resources>
