--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -260,4 +260,14 @@
     <string name="password_quality_reasonable">reasonable</string>
     <string name="password_quality_poor">poor</string>
     <string name="password_quality_weak">weak</string>
+
+    <string name="password_recommendation">
+        <![CDATA[<p>Choose a VERY long passphrase. For example, combine uncommon words like this:</p>
+  <font color="#088447">unconventional blueberry unlike any other<br/>
+semi automated shiseido mask<br/>
+icelanders prefer real sauna</font>
+  <p>Combinations like that are memorable, easy to type and the most secure.</p>
+  <p>In contrast, pass phrases like <font color="#AA4444">@ut0m4t3d</font>, <font color="#AA4444">Honey167!</font> or <font color="#AA4444">lA45pf8$d</font> are a poor choice when it comes to security. Because they are so short, on a fleet of 10,000 ordinary computers, these <b>can be guessed in 7 seconds</b>.</p>
+  <p>To read more, see <a href="https://blogs.dropbox.com/tech/2012/04/zxcvbn-realistic-password-strength-estimation/" target="_blank">zxcvbn article</a> by Dropbox.</p>]]>
+        </string>
 </resources>
