--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -274,4 +274,8 @@ icelanders prefer real sauna</font>
   <p>In contrast, pass phrases like <font color="#AA4444">@ut0m4t3d</font>, <font color="#AA4444">Honey167!</font> or <font color="#AA4444">lA45pf8$d</font> are a poor choice when it comes to security. Because they are so short, on a fleet of 10,000 ordinary computers, these <b>can be guessed in 7 seconds</b>.</p>
   <p>To read more, see <a href="https://blogs.dropbox.com/tech/2012/04/zxcvbn-realistic-password-strength-estimation/" target="_blank">zxcvbn article</a> by Dropbox.</p>]]>
         </string>
+    <string name="you_are_all_set">You\'re all set!</string>
+    <string name="you_can_send_and_receive_encrypted_emails">From now on, you can send and receive encrypted emails on
+        this email account.</string>
+    <string name="please_wait_while_key_will_be_created">Creating a key, please wait</string>
 </resources>
