--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -279,4 +279,5 @@ icelanders prefer real sauna</font>
     <string name="please_wait_while_key_will_be_created">Creating a key, please wait</string>
     <string name="copy">Copy</string>
     <string name="remove">Remove</string>
+    <string name="not_private_key">This is not a private key</string>
 </resources>
