--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="set_up_flow_crypt">Set up FlowCrypt</string>
     <plurals name="found_backup_of_your_account_key">
         <item quantity="one">Found a backup of your account key</item>
-        <item quantity="other">Found %1$d backups of your account key</item>
+        <item quantity="other">Found %1$d account key backups</item>
     </plurals>
     <string name="enter_your_pass_phrase">Enter your pass phrase</string>
     <string name="load_account">Load Account</string>
