--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -40,8 +40,8 @@
     <string name="no_results">No results</string>
     <string name="set_up_flow_crypt">Set up FlowCrypt</string>
     <plurals name="found_backup_of_your_account_key">
-        <item quantity="one">Found a backup of your account key</item>
-        <item quantity="other">Found %1$d account key backups</item>
+        <item quantity="one">We found a backup of your key</item>
+        <item quantity="other">We found backups of %1$d keys</item>
     </plurals>
     <string name="enter_your_pass_phrase">Enter your pass phrase</string>
     <string name="load_account">Load Account</string>
@@ -291,10 +291,7 @@ icelanders prefer real sauna</font>
     <string name="sign_in">SIGN IN</string>
     <string name="network_error_please_retry">Network error, please retry</string>
     <plurals name="not_recovered_all_keys">
-        <item quantity="one">You successfully recovered %1$d of %2$d backups. There is 1 backup left.Try a different
-            pass
-            phrase to unlock all backups.</item>
-        <item quantity="other">You successfully recovered %1$d of %2$d backups. There are %3$d backups left. Try a
-            different pass phrase to unlock all backups.</item>
+        <item quantity="one">You successfully recovered %1$d of %2$d keys. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
+        <item quantity="other">You successfully recovered %1$d of %2$d keys. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
     </plurals>
 </resources>
