--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -291,7 +291,7 @@ icelanders prefer real sauna</font>
     <string name="sign_in">SIGN IN</string>
     <string name="network_error_please_retry">Network error, please retry</string>
     <plurals name="not_recovered_all_keys">
-        <item quantity="one">You successfully recovered %1$d of %2$d keys. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
-        <item quantity="other">You successfully recovered %1$d of %2$d keys. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
+        <item quantity="one">%1$d of %2$d keys successfully imported. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
+        <item quantity="other">%1$d of %2$d keys successfully imported. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
     </plurals>
 </resources>
