--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -300,8 +300,7 @@ icelanders prefer real sauna</font>
     </plurals>
     <string name="cannot_send_attachment_without_read_permission">The attachment cannot be sent without the read external
         storage permission</string>
-    <string name="hint_when_found_keys_in_email">FlowCrypt found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\n
-        Please enter pass phrase(s) that you used when the backup was made.</string>
+    <string name="hint_when_found_keys_in_email">FlowCrypt found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
     <string name="forward">Forward</string>
     <string name="forward_encrypted">Forward Encrypted</string>
     <string name="reply_encrypted">Reply Encrypted</string>
