--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -306,4 +306,5 @@ icelanders prefer real sauna</font>
     <string name="reply_encrypted">Reply Encrypted</string>
     <string name="reply_all_encrypted">Reply all Encrypted</string>
     <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
+    <string name="cannot_forward_html_emails">Cannot forward HTML emails</string>
 </resources>
