--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="support_email">human@flowcrypt.com</string>
 
     <string name="compose">Compose</string>
-    <string name="prompt_recipient">Add recipient</string>
+    <string name="prompt_recipients_to">Add recipients (To)</string>
+    <string name="prompt_recipients_cc">Add recipients (Cc)</string>
+    <string name="prompt_recipients_bcc">Add recipients (Bcc)</string>
     <string name="prompt_recipients">Recipients</string>
     <string name="prompt_subject">Subject</string>
     <string name="prompt_compose_security_email">Compose secure message</string>
@@ -110,7 +112,7 @@
     <string name="error_occurred_while_sending_message">Error occurred while sending the message</string>
     <string name="sending_message_must_not_be_empty">Message should not be empty</string>
     <string name="there_was_syncing_problem">There was a syncing problem</string>
-    <string name="info_about_some_contacts_not_received">Could not get information about some contacts</string>
+    <string name="info_about_some_contacts_not_received">Could not get information about some %1$s contacts</string>
     <string name="error_occurred_while_this_action_running">Error: could not complete action</string>
     <string name="error_occurred_while_receiving_private_keys">Could not retrieve your private key</string>
     <string name="no_subject">(no subject)</string>
@@ -308,4 +310,7 @@ icelanders prefer real sauna</font>
     <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
     <string name="cannot_forward_html_emails">Cannot forward HTML emails</string>
     <string name="cannot_forward_encrypted_attachments">Encrypted attachments are not forwarded. Please attach the files if you want them included.</string>
+    <string name="to">To</string>
+    <string name="cc">Cc</string>
+    <string name="bcc">Bcc</string>
 </resources>
