Fixed "Lost folder connection to server" on the messages list screen.| Close #238

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -313,4 +313,5 @@ icelanders prefer real sauna</font>
     <string name="to">To</string>
     <string name="cc">Cc</string>
     <string name="bcc">Bcc</string>
+    <string name="failed_please_try_again_later">Failed. Please try again later</string>
 </resources>
