--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -321,4 +321,8 @@ icelanders prefer real sauna</font>
     <string name="add_contact">Add Contact</string>
     <string name="add_public_keys_of_your_contacts">Add public keys of your contacts to send them encrypted messages.</string>
     <string name="search_by_key_id_or_email">Search by key id or email</string>
+    <string name="api_error">API error</string>
+    <string name="internal_error">An internal error</string>
+    <string name="import_all">Import all</string>
+    <string name="public_keys_not_found">Public keys not found</string>
 </resources>
