Improved a better realization of import the public keys.| #239

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -327,4 +327,6 @@ icelanders prefer real sauna</font>
     <string name="no_public_key_found">No public key found</string>
     <string name="already_imported">Already imported</string>
     <string name="success">Success</string>
+    <string name="key_is_empty">The key is empty</string>
+    <string name="parse_public_keys">Parse public keys</string>
 </resources>
