Handled manually some errors which depend on some device platform(LineageOS)| #225, #231, #232, #248

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -329,4 +329,5 @@ icelanders prefer real sauna</font>
     <string name="success">Success</string>
     <string name="key_is_empty">The key is empty</string>
     <string name="parse_public_keys">Parsing public keys</string>
+    <string name="device_not_supported_key_store_error">Your device is currently not supported: KeystoreService not available.</string>
 </resources>
