--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -328,6 +328,7 @@ icelanders prefer real sauna</font>
     <string name="already_imported">Already imported</string>
     <string name="success">Success</string>
     <string name="key_is_empty">The key is empty</string>
-    <string name="parse_public_keys">Parsing public keys</string>
+    <string name="parsing_public_keys">Parsing public keys</string>
+    <string name="importing_public_keys">Importing public keys</string>
     <string name="device_not_supported_key_store_error">Your device is currently not supported: KeystoreService not available.</string>
 </resources>
