--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -336,4 +336,6 @@ icelanders prefer real sauna</font>
     <string name="no_encrypted_messages">No encrypted messages</string>
     <string name="messages">Messages</string>
     <string name="messages_notification_channel">The messages notification channel</string>
+    <string name="incoming_message">%1$d incoming messages</string>
+    <string name="notification_message_line_template">%1$s %2$s</string>
 </resources>
