--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -341,4 +341,5 @@ icelanders prefer real sauna</font>
     <string name="manage_notifications">Manage notifications</string>
     <string name="notification_level">Notification level</string>
     <string name="receive_notifications_for">Receive notifications for:</string>
+    <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
 </resources>
