--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -342,4 +342,7 @@ icelanders prefer real sauna</font>
     <string name="notification_level">Notification level</string>
     <string name="receive_notifications_for">Receive notifications for:</string>
     <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
+    <string name="changing_pass_phrase">Changing the pass phrase</string>
+    <string name="done">Done!</string>
+    <string name="pass_phrase_changed">Pass phrase changed. You will find a new backup in your inbox.</string>
 </resources>
