Added saving a new backup in INBOX if there are any previous backups.| #252

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -344,6 +344,6 @@ icelanders prefer real sauna</font>
     <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
     <string name="changing_pass_phrase">Changing the pass phrase</string>
     <string name="done">Done!</string>
-    <string name="pass_phrase_changed">Pass phrase changed. You will find a new backup in your inbox.</string>
+    <string name="pass_phrase_changed">Pass phrase successfully changed!</string>
     <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
 </resources>
